--- a/ansible.yml
+++ b/ansible.yml
@@ -3,4 +3,4 @@
   tasks:
     - name: Print message
       debug:
-        msg: Hello Ansible World  Prieba -1
+        msg: Hello Ansible World  Prueba -1
